Добавлен обмен с сервером

--- a/templates/resource.qrc
+++ b/templates/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="icons">
+    <file>icons/forbidden_q9gv0dg6fncc.svg</file>
     <file>icons/cross_msws3p218fv0.svg</file>
     <file>icons/wholesale_f59fbc18c3go.svg</file>
     <file>icons/packed_7v4am0agzag5.svg</file>
